--- a/map.html
+++ b/map.html
@@ -28,6 +28,10 @@
   pointer-events: none;
 }
 
+.state-places {
+   fill: #444;
+}
+
 .county-borders {
   fill: none;
   stroke: #fff;
@@ -56,7 +60,8 @@
 
 var width = window.innerWidth - 25,
    height = window.innerHeight - 25,
-    centered;
+    centered,
+    active = d3.select(null);
 
 var rateById = d3.map();
 
@@ -71,17 +76,28 @@ var projection = d3.geo.albersUsa()
 var path = d3.geo.path()
     .projection(projection);
 
+var zoom = d3.behavior.zoom()
+   .translate([0,0])
+   .scale(1)
+   .scaleExtent([1,8])
+   .on("zoom", zoomed);
+
 var svg = d3.select("body").append("svg")
     .attr("width", width)
-    .attr("height", height);
+    .attr("height", height)
+    .on("click", stopped, true);
 
 svg.append("rect")
     .attr("class", "background")
     .attr("width", width)
     .attr("height", height)
-    .on("click", clicked);
+    .on("click", reset);
 
 var g = svg.append("g");
+
+svg
+   .call(zoom)
+   .call(zoom.event);
 
 var state_features, county_features, state_mesh, county_mesh;
 
@@ -91,13 +107,14 @@ d3.json("us.json", function(error, us) {
   state_mesh = topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; });
   county_features = topojson.feature(us, us.objects.counties).features;
   county_mesh = topojson.mesh(us, us.objects.counties, function(a, b) { return a !== b; });
+  // state_places = topojson.feature(us, us.objects.places);
 
   g.append("g")
       .attr("class", "states")
     .selectAll("path")
       .data(state_features)
     .enter().append("path")
-      .attr("class", function(d) { return quantize(rateById.get(d.id)); })
+      .attr("class", "states")
       .attr("d", path)
       .on("click", clicked);
 
@@ -105,32 +122,35 @@ d3.json("us.json", function(error, us) {
       .datum(state_mesh)
       .attr("class", "state-borders")
       .attr("d", path);
+
+   // g.append("path")
+   //    .datum(state_places)
+   //    .attr("d", path)
+   //    .attr("class", "state-places");
 });
 
 d3.tsv("unemployment.tsv", function(error, d) {
    rateById.set(d.id, +d.rate);
 });
 
-// d3.queue()
-//     .defer(d3.json, "/mbostock/raw/4090846/us.json")
-//     .defer(d3.tsv, "unemployment.tsv", function(d) { rateById.set(d.id, +d.rate); })
-//     .await(ready);
-
 function clicked(d) {
-  var x, y, k;
+   console.log(d.id);
+   if (active.node() === this) return reset();
+   active.classed("active", false);
+   active = d3.select(this).classed("active", true);
 
-  if (d && centered !== d) {
-    var centroid = path.centroid(d);
-    x = centroid[0];
-    y = centroid[1];
-    k = 4;
-    centered = d;
-  } else {
-    x = width / 2;
-    y = height / 2;
-    k = 1;
-    centered = null;
-  }
+   var bounds = path.bounds(d),
+       dx = bounds[1][0] - bounds[0][0],
+       dy = bounds[1][1] - bounds[0][1],
+       x = (bounds[0][0] + bounds[1][0]) / 2,
+       y = (bounds[0][1] + bounds[1][1]) / 2,
+       scale = Math.max(1, Math.min(8, 0.9 / Math.max(dx / width, dy / height))),
+       translate = [width / 2 - scale * x, height / 2 - scale * y];
+
+   svg.transition()
+       .duration(750)
+       .call(zoom.translate(translate).scale(scale).event);
+
 
   // g.append("g")
   //     .attr("class", "counties")
@@ -144,31 +164,25 @@ function clicked(d) {
   //      .datum(county_mesh)
   //      .attr("class", "county-borders")
   //      .attr("d", path);
-
-  g.selectAll("path")
-      .classed("active", centered && function(d) { return d === centered; });
-
-  g.transition()
-      .duration(750)
-      .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")scale(" + k + ")translate(" + -x + "," + -y + ")")
-      .style("stroke-width", 1.5 / k + "px");
 }
 
-// function ready(error, us) {
-//   if (error) throw error;
-//
-//   svg.append("g")
-//       .attr("class", "counties")
-//     .selectAll("path")
-//       .data(topojson.feature(us, us.objects.counties).features)
-//     .enter().append("path")
-//       .attr("class", function(d) { return quantize(rateById.get(d.id)); })
-//       .attr("d", path);
-//
-//   svg.append("path")
-//       .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; }))
-//       .attr("class", "states")
-//       .attr("d", path);
-// }
+function reset() {
+   active.classed("active", false);
+   active = d3.select(null);
+
+   svg.transition()
+      .duration(750)
+      .call(zoom.translate([0,0]).scale(1).event);
+}
+
+function zoomed() {
+   g.style("stroke-width", 1.5 / d3.event.scale + "px");
+   g.attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
+}
+
+function stopped() {
+   if (d3.event.defaultPrevented) d3.event.stopPropagation();
+}
+
 
 </script>
