--- a/counties.html
+++ b/counties.html
@@ -39,6 +39,11 @@
    fill: #fff;
 }
 
+td {
+
+   padding-bottom: 5px;
+}
+
 .q0-9 { fill:rgb(247,251,255); }
 .q1-9 { fill:rgb(222,235,247); }
 .q2-9 { fill:rgb(198,219,239); }
@@ -58,9 +63,95 @@
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/queue.v1.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
-<script src="index.js"></script>
-<script src="tooltip.js"></script>
 <script>
+
+var countyKeys = {6071:"San Bernardino",
+6065:"Riverside",
+6025:"Imperial",
+6073:"San Diego",
+6059:"Orange",
+6037:"Los Angeles",
+6111:"Ventura",
+6083:"Santa Barbara",
+6029:"Kern",
+6079:"San Luis Obispo",
+6027:"Inyo",
+6107:"Tulare",
+6031:"Kings",
+6053:"Monterey",
+6069:"San Benito",
+6019:"Fresno",
+6051:"Mono",
+6039:"Madera",
+6047:"Merced",
+6043:"Mariposa",
+6109:"Tuolumne",
+6003:"Alpine",
+6009:"Calaveras",
+6099:"Stanislaus",
+6085:"Santa Clara",
+6087:"Santa Cruz",
+6081:"San Mateo",
+6075:"San Francisco",
+6001:"Alameda",
+6077:"San Joaquin",
+6013:"Contra Costa",
+6005:"Amador",
+6017:"El Dorado",
+6067:"Sacramento",
+6095:"Solano",
+6113:"Yolo",
+6055:"Napa",
+6097:"Sonoma",
+6041:"Marin",
+6045:"Mendocino",
+6101:"Sutter",
+6061:"Placer",
+6057:"Nevada",
+6115:"Yuba",
+6011:"Colusa",
+6033:"Lake",
+6021:"Glenn",
+6007:"Butte",
+6063:"Plumas",
+6035:"Lassen",
+6103:"Tehama",
+6105:"Trinity",
+6023:"Humboldt",
+6089:"Shasta",
+6049:"Modoc",
+6093:"Siskiyou",
+6015:"Del Norte"
+};
+
+var names = ["So Melecio",  
+"Yang Yohe",  
+"Jami Nesby",  
+"Keila Backes",  
+"Gino Rugh",  
+"Necole Goldston",  
+"Fabiola Rosborough",  
+"Bea Wiseley",  
+"Torie Harnden",  
+"Min Zanders",  
+"Hisako Cooney",  
+"Ilana Lum",  
+"Monika Bohannan",  
+"Bobbie Bevil",  
+"Holli Colman",  
+"Athena Penick",  
+"Jarrod Keathley",  
+"Rozella Kirksey",  
+"Sigrid Murff",  
+"Clarisa Jaffe",  
+"Emilee Torgerson",  
+"Mariana Gilley",  
+"Estefana Mackey",  
+"Noel Martyn",  
+"Evia Peavey",  
+"Stephany Heckel",  
+"Oswaldo Matheson",  
+"Corrina Cerny"];
 
 //define zoom behavior
 var zoom = d3.behavior.zoom()
@@ -147,6 +238,7 @@ function ready(error, us) {
 
 //Clicck handler that centers the map around the clicked object and zooms into it
 function clicked(d) {
+   console.log(d.id);
    if (active.node() === this) return reset();
    active.classed("active", false);
    active = d3.select(this).classed("active", true);
@@ -167,9 +259,10 @@ function clicked(d) {
    // graphic.create("test");
 
    //set the tooltip
-   d3.select("#tooltip").html(tooltiphtml("California", "CA"))
-      .style("left", (d3.event.pageX) + "px")
-      .style("top", (d3.event.pageY - 28) + "px")
+   d3.select("#tooltip").html(tooltiphtml("California", d.id))
+      .style("left", 0 + "px")
+      .style("top", 0 + "px")
+      .style("width", "200px")
       .style("z-index", 99);
    d3.select("#tooltip").transition()
       .delay(500)
@@ -190,10 +283,6 @@ function reset() {
    d3.select("#tooltip").transition().duration(500).style("opacity", 0); //set to 0
 }
 
-function updateSVGSize() {
-
-}
-
 function zoomed() {
    g.style("stroke-width", 1.5 / d3.event.scale + "px");
    g.attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
@@ -204,11 +293,30 @@ function stopped() {
    if (d3.event.defaultPrevented) d3.event.stopPropagation();
 }
 
-function tooltiphtml(n,d) {
-   return "<h4>"+n+"</h4><table>"+
-      "<tr><td>Low</td><td>"+(d.low)+"</td></tr>"+
-      "<tr><td>Average</td><td>"+(d.avg)+"</td></tr>"+
-      "<tr><td>High</td><td>"+(d.high)+"</td></tr>"+
+function tooltiphtml(n, d) {
+   console.log(lookupCountyByCode(d));
+   var largeNum = generateNumber();
+   var smallNum = generateSmallerNumber(largeNum);
+   var percent = smallNum/largeNum * 100;
+   var numTickets = Math.floor(Math.random() * 5);
+   var numTotalTickets = Math.floor(Math.random() * 150);
+   var index = Math.floor(Math.random() * names.length-1);
+   return "<h2>"+n+"</h2>"+
+      "<h2>"+ lookupCountyByCode(d)+" County</h2> <h3></h3>"+
+      "<h4>Saturation</h4><table>"+
+      "<tr><td>Number of Students</td><td>"+largeNum+"</td></tr>"+
+      "<tr><td>Number of Students using PS</td><td>"+smallNum+"</td></tr>"+
+      "<tr><td>Percentage of Students using PS</td><td>"+percent.toFixed(2)+"%</td></tr>"+
+      "</table>"+
+      "<h4>Support</h4><table>"+
+      "<tr><td>Techincal Contact (Name)</td><td>"+names[index]+"</td></tr>"+
+      "<tr><td>Technical Contact (Phone)</td><td>"+"(555) 555-1234"+"</td></tr>"+
+      "<tr><td>Number of Current Tickets</td><td>"+numTickets+"</td></tr>"+
+      "<tr><td>Number of Lifetime Tickets</td><td>"+numTotalTickets+"</td></tr>"+
+      "</table>"+
+      "<h4>Sales</h4><table>"+
+      "<tr><td>PowerSchool Version</td><td>"+"10.0.0"+"</td></tr>"+
+      "<tr><td>Assigned Sales Contact</td><td>"+names[index+1]+"</td></tr>"+
       "</table>";
 }
 
@@ -226,5 +334,16 @@ var sampleData = {};
       avg:Math.round((low+mid+high)/3), color:d3.interpolate("#ffffcc", "#800026")(low/100)};
    });
 
+function lookupCountyByCode(id) {
+   return countyKeys[id];
+}
+
+function generateNumber() {
+   return Math.floor(Math.random() * 100000);
+}
+
+function generateSmallerNumber(n) {
+   return Math.floor(Math.random() * n);
+}
 
 </script>
